--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,11 @@ spring.datasource.password=
 
 spring.datasource.driver-class-name=org.h2.Driver
 
-spring.jpa.properties.show_sql=true
-spring.jpa.properties.format_Sql=true
-spring.jpa.properties.ddl_auto=create
-spring.jpa.properties.batch_size=20
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.ddl_auto=create
+spring.jpa.properties.hibernate.batch_size=20
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-spring.jpa.hibernate.use-new-id-generator-mappings=true
+spring.jpa.properties.hibernate.use-new-id-generator-mappings=true
