--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.properties.hibernate.batch_size=20
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 spring.jpa.properties.hibernate.use-new-id-generator-mappings=true
+
+spring.output.ansi.enabled=ALWAYS
