--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 spring.jpa.properties.hibernate.use-new-id-generator-mappings=true
 
-spring.output.ansi.enabled=ALWAYS
+spring.output.ansi.enabled=always
